--- a/sparklers/src/main/resources/application.properties
+++ b/sparklers/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:~/jooq
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jooq.sql-dialect=h2
+spring.datasource.url=jdbc:mysql://localhost:3306/sparklers
+spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jooq.sql-dialect=mysql_5_7
 
 
