--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.zhenhui.demo</groupId>
-        <artifactId>starters-parent</artifactId>
+        <artifactId>sparklers-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
