--- a/sparklers/src/main/resources/application.properties
+++ b/sparklers/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+server.port=8080
 
 spring.profiles.active=test
 
-server.port=8080
+
+jwt.issuer=sparklers
+jwt.http-header=AUTH
+jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
+jwt.ttl=360000
+
+
 
