--- a/sparklers/src/main/resources/application-test.properties
+++ b/sparklers/src/main/resources/application-test.properties
@@ -4,7 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jooq.sql-dialect=mysql_5_7
 
-
-
-logging.level.org.springframework=INFO
+spring.cache.type=simple
+spring.cache.cache-names=captchas
 
