--- a/sparklers/pom.xml
+++ b/sparklers/pom.xml
@@ -101,8 +101,19 @@
         </dependency>
 
         <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -156,6 +167,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
+                <configuration>
+                    <forkCount>1</forkCount> <!-- 虚拟机的最大线程数 -->
+                    <reuseForks>false</reuseForks>  <!-- 虚拟机是否可以重用 -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
