--- a/sparklers/src/main/resources/application-test.properties
+++ b/sparklers/src/main/resources/application-test.properties
@@ -1,9 +1,44 @@
+server.port=8080
+
+# JWT
+jwt.issuer=sparklers
+jwt.http-header=AUTH
+jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
+jwt.ttl=360000
+
+# Dubbo
+dubbo.scan.basePackages  = com.zhenhui.demo.sparklers
+dubbo.application.id = sparklers
+dubbo.application.name = sparklers
+dubbo.protocol.id = dubbo
+dubbo.protocol.name = dubbo
+dubbo.protocol.port = 20880
+dubbo.registry.id = my-registry
+dubbo.registry.address = zookeeper://127.0.0.1:2181
+
+# DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jooq.sql-dialect=mysql_5_7
 
-spring.cache.type=simple
+# Redis
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=3000
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+
+# Cache
+spring.cache.type=redis
 spring.cache.cache-names=captchas,blacklist
+
+# Druid
+
+
 
