--- a/sparklers/src/main/resources/application-dev.properties
+++ b/sparklers/src/main/resources/application-dev.properties
@@ -32,7 +32,11 @@ jedis.pool.max-idle=8
 jedis.pool.min-idle=0
 jedis.pool.block-when-exhausted=true
 
-# Druid
+# Captcha
+captcha.expire.minutes=5
+captcha.send.protect=true
+captcha.send.interval=60
+
 
 
 
