--- a/sparklers/pom.xml
+++ b/sparklers/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>com.zhenhui.library</groupId>
-            <artifactId>spring-redis-simplify</artifactId>
+            <artifactId>spring-jedis-simplify</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.5.3-beta</version>
+            <version>3.5.4-beta</version>
         </dependency>
 
         <!-- Test -->
@@ -134,9 +134,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ai.grakn</groupId>
-            <artifactId>redis-mock</artifactId>
-            <version>0.1.6</version>
+            <groupId>com.github.kstyrc</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <version>0.6</version>
             <scope>test</scope>
         </dependency>
 
@@ -204,6 +204,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                </configuration>
             </plugin>
         </plugins>
     </build>
