--- a/sparklers/src/main/resources/application-test.properties
+++ b/sparklers/src/main/resources/application-test.properties
@@ -17,7 +17,7 @@ dubbo.registry.id = my-registry
 dubbo.registry.address = zookeeper://127.0.0.1:12181
 
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
