--- a/sparklers/src/main/resources/application-dev.properties
+++ b/sparklers/src/main/resources/application-dev.properties
@@ -21,6 +21,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&char
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jooq.sql-dialect=mysql_5_7
 
 # Jedis
