--- a/sparklers/src/main/resources/application-test.properties
+++ b/sparklers/src/main/resources/application-test.properties
@@ -6,18 +6,22 @@ jwt.http-header=AUTH
 jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
 jwt.ttl=360000
 
-# Dubbo
+# Base packages to scan Dubbo Components (e.g., @Service, @Reference)
 dubbo.scan.basePackages  = com.zhenhui.demo.sparklers
+# Dubbo Config properties
+## ApplicationConfig Bean
 dubbo.application.id = sparklers
 dubbo.application.name = sparklers
+## ProtocolConfig Bean
 dubbo.protocol.id = dubbo
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = 20880
+## RegistryConfig Bean
 dubbo.registry.id = my-registry
-dubbo.registry.address = zookeeper://127.0.0.1:12181
+dubbo.registry.address = zookeeper://127.0.0.1:2181
 
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -36,6 +40,10 @@ jedis.pool.block-when-exhausted=true
 captcha.expire.minutes=5
 captcha.send.protect=false
 captcha.send.interval=60
+
+# Sparklers security app dubbo application & registry
+sparklers.security.dubbo.application.id=sparklers
+sparklers.security.dubbo.registry.id=zookeeper://127.0.0.1:2181
 
 
 
