--- a/sparklers-uic/src/main/resources/application-dev.properties
+++ b/sparklers-uic/src/main/resources/application-dev.properties
@@ -7,9 +7,9 @@ jwt.http-header=AUTH
 jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
 jwt.ttl=360000
 ## 3rd auth
-weibo.token.verity.url=
-wechat.token.verify.url=
-qq.token.verify.url=
+weibo.appkey=
+wechat.appkey=
+qq.appkey=
 
 # Dubbo
 dubbo.application.logger=slf4j
