--- a/sparklers-uic/src/main/resources/application-test.properties
+++ b/sparklers-uic/src/main/resources/application-test.properties
@@ -1,23 +1,24 @@
 server.port=8080
 
-# JWT
+# Auth
+##JWT
 jwt.issuer=sparklers
 jwt.http-header=AUTH
 jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
 jwt.ttl=360000
+## 3rd auth
+weibo.appkey=
+wechat.appkey=
+qq.appkey=
 
+# Dubbo
 dubbo.application.logger=slf4j
-# Base packages to scan Dubbo Components (e.g., @Service, @Reference)
 dubbo.scan.basePackages  = com.zhenhui.demo.sparklers
-# Dubbo Config properties
-## ApplicationConfig Bean
 dubbo.application.id = sparklers-uic
 dubbo.application.name = sparklers-uic
-## ProtocolConfig Bean
 dubbo.protocol.id = dubbo
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = 20880
-## RegistryConfig Bean
 dubbo.registry.id = my-registry
 dubbo.registry.address = zookeeper://127.0.0.1:2181
 
