--- a/sparklers-uic/src/main/resources/application-test.properties
+++ b/sparklers-uic/src/main/resources/application-test.properties
@@ -1,5 +1,4 @@
 server.port=8080
-
 # Auth
 ##JWT
 jwt.issuer=sparklers
@@ -10,39 +9,35 @@ jwt.ttl=360000
 weibo.appkey=
 wechat.appkey=
 qq.appkey=
-
 # Dubbo
 dubbo.application.logger=slf4j
-dubbo.scan.basePackages  = com.zhenhui.demo.sparklers
-dubbo.application.id = sparklers-uic
-dubbo.application.name = sparklers-uic
-dubbo.protocol.id = dubbo
-dubbo.protocol.name = dubbo
-dubbo.protocol.port = 20880
-dubbo.registry.id = my-registry
-dubbo.registry.address = zookeeper://127.0.0.1:2181
-
+dubbo.scan.basePackages=com.zhenhui.demo.sparklers
+dubbo.application.id=sparklers-uic
+dubbo.application.name=sparklers-uic
+dubbo.protocol.id=dubbo
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.registry.id=my-registry
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jooq.sql-dialect=mysql_5_7
-
-# Jedis
-jedis.host=localhost
-jedis.port=9736
-jedis.pool.max-total=8
-jedis.pool.max-wait=-1
-jedis.pool.max-idle=8
-jedis.pool.min-idle=0
-jedis.pool.block-when-exhausted=true
-
+# Redis cache
+spring.cache.type=redis
+spring.cache.cache-names=user,user3rd
+spring.redis.host=localhost
+spring.redis.port= 6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-idle=8
 # Captcha
 captcha.expire.minutes=5
 captcha.send.protect=false
 captcha.send.interval=60
-
 # Sparklers security app dubbo application & registry
 sparklers.uic.dubbo.application.id=sparklers-uic
 sparklers.uic.dubbo.registry.id=zookeeper://127.0.0.1:2181
