--- a/sparklers-uic/src/main/resources/application-dev.properties
+++ b/sparklers-uic/src/main/resources/application-dev.properties
@@ -50,4 +50,5 @@ captcha.send.interval=60
 # Sparklers security app dubbo application & registry
 sparklers.uic.dubbo.application.id=sparklers-uic
 sparklers.uic.dubbo.registry.id=zookeeper://127.0.0.1:2181
-
+# Logging
+logging.register-shutdown-hook=true
