--- a/sparklers-uic/pom.xml
+++ b/sparklers-uic/pom.xml
@@ -62,6 +62,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
@@ -145,6 +150,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
             <version>4.0.1</version>
@@ -168,7 +179,6 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.0.3.RELEASE</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -187,7 +197,7 @@
                 </executions>
 
                 <configuration>
-                    <logging>TRACE</logging>
+                    <logging>INFO</logging>
                     <jdbc>
                         <driver>com.mysql.jdbc.Driver</driver>
                         <url>jdbc:mysql://localhost:3306/sparklers?useSSL=false</url>
