--- a/sparklers-uic/src/main/resources/application-test.properties
+++ b/sparklers-uic/src/main/resources/application-test.properties
@@ -18,18 +18,19 @@ dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
 dubbo.registry.id=my-registry
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=zookeeper://127.0.0.1:12181
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.driver-class-name=org.gjt.mm.mysql.Driver
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS SPARKLERS
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.schema=classpath:schemas/db.h2.schema.sql
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jooq.sql-dialect=mysql_5_7
+spring.jooq.sql-dialect=h2
 # Redis cache
 spring.cache.type=redis
 spring.cache.cache-names=user,user3rd
 spring.redis.host=localhost
-spring.redis.port= 6379
+spring.redis.port= 9736
 spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.jedis.pool.min-idle=0
@@ -40,8 +41,10 @@ captcha.send.protect=false
 captcha.send.interval=60
 # Sparklers security app dubbo application & registry
 sparklers.uic.dubbo.application.id=sparklers-uic
-sparklers.uic.dubbo.registry.id=zookeeper://127.0.0.1:2181
+sparklers.uic.dubbo.registry.id=zookeeper://127.0.0.1:12181
 
+# Logging
+logging.register-shutdown-hook=true
 
 
 
