--- a/uic-api/pom.xml
+++ b/uic-api/pom.xml
@@ -22,6 +22,14 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.6.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
