--- a/uic-webapi/src/main/resources/application.properties
+++ b/uic-webapi/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
-server.servlet.context-path=/uic/
+spring.application.name=sparklers-uic
+spring.mvc.favicon.enabled=false
 # Auth
 ##JWT
 jwt.issuer=sparklers
@@ -11,17 +12,9 @@ weibo.appkey=
 wechat.appkey=
 qq.appkey=
 
-# Dubbo
-spring.dubbo.server=true
-spring.dubbo.application.id=sparklers-uic
-spring.dubbo.application.name=sparklers-uic
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20800
-spring.dubbo.registry.address=zookeeper://localhost:2181
-
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -34,6 +27,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jooq.sql-dialect=mysql_5_7
+
 
 # Redis cache
 spring.cache.type=redis
@@ -53,6 +47,18 @@ captcha.send.interval=60
 # Logging
 debug=true
 logging.config=classpath:log4j2.xml
-logging.level.root=INFO
-logging.level.org.springframework.web=INFO
+logging.level.root=info
+logging.level.org.springframework.web=debug
 logging.register-shutdown-hook=true
+
+
+# Config properties
+eureka.instance.hostname=localhost
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka
+
+management.endpoint.shutdown.enabled=false
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=loggers
