--- a/uic-api/pom.xml
+++ b/uic-api/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>sparkler-uic</artifactId>
         <groupId>com.zhenhui.demo</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,14 +23,6 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-            <version>1.4.6.RELEASE</version>
-            <scope>provided</scope>
-        </dependency>
-
     </dependencies>
 
 </project>
