--- a/uic-webapi/src/main/resources/application.properties
+++ b/uic-webapi/src/main/resources/application.properties
@@ -2,16 +2,19 @@ server.port=8080
 spring.application.name=sparklers-uic
 spring.mvc.favicon.enabled=false
 # Auth
+# Captcha
+captcha.expire.minutes=5
+captcha.send.protect=true
+captcha.send.interval=60
 ##JWT
 jwt.issuer=sparklers
 jwt.http-header=AUTH
 jwt.secret=qIw3UywLHcjH0V422CGprA1K6HmE5CYlhDsAQztG
-jwt.ttl=360000
+jwt.ttl=31536000
 ## 3rd auth
 weibo.appkey=
 wechat.appkey=
 qq.appkey=
-
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -27,38 +30,22 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jooq.sql-dialect=mysql_5_7
-
-
 # Redis cache
 spring.cache.type=redis
-spring.cache.cache-names=user,user3rd
+spring.cache.cache-names=users,3users
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.jedis.pool.min-idle=0
 spring.redis.jedis.pool.max-idle=8
-
-# Captcha
-captcha.expire.minutes=5
-captcha.send.protect=true
-captcha.send.interval=60
-
+# Dubbo
+dubbo.scan.base-packages=com.zhenhui.demo.sparklers.uic.service
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 # Logging
-debug=true
-logging.config=classpath:log4j2.xml
-logging.level.root=info
-logging.level.org.springframework.web=debug
 logging.register-shutdown-hook=true
+logging.level.root=trace
+logging.level.org.springframework.web=trace
 
-
-# Config properties
-eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka
-
-management.endpoint.shutdown.enabled=false
-management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=loggers
