--- a/uic-webapi/src/main/resources/application.properties
+++ b/uic-webapi/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8088
 spring.application.name=sparklers-uic
 spring.mvc.favicon.enabled=false
 # Auth
@@ -17,7 +17,7 @@ wechat.appkey=
 qq.appkey=
 # DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/sparklers?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -42,10 +42,12 @@ spring.redis.jedis.pool.max-idle=8
 # Dubbo
 dubbo.scan.base-packages=com.zhenhui.demo.sparklers.uic.service
 dubbo.protocol.name=dubbo
-dubbo.protocol.port=20880
+dubbo.protocol.port=-1
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 # Logging
 logging.register-shutdown-hook=true
-logging.level.root=trace
-logging.level.org.springframework.web=trace
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.org.springframework.boot.autoconfigure=error
+
 
